--- a/app/src/main/res/layout/standings_item_row.xml
+++ b/app/src/main/res/layout/standings_item_row.xml
@@ -10,6 +10,7 @@
         android:id="@+id/position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/avatar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/avatar"
